--- a/Info-Trabajo-Final/Style.css
+++ b/Info-Trabajo-Final/Style.css
@@ -104,7 +104,8 @@ nav {
     flex-wrap: wrap;
 }
 
-nav button,
+.historiaNav,
+.gamesNav,
 main section article button {
     width: 150px;
     height: 40px;
@@ -117,6 +118,8 @@ main section article button {
     box-shadow: 2px 2px 10px greenyellow;
     cursor: pointer;
     flex-wrap: wrap;
+    background-color: rgb(190, 190, 190);
+    padding: 5px;
 }
 
 nav button a {
@@ -382,17 +385,17 @@ footer h3 {
         flex-direction: column;
         justify-content: flex-start;
         margin: 0;
-        padding:0;
+        padding: 0;
     }
 
-    nav button{
+    nav button {
         margin: 0;
     }
 
-    .displayNone{
+    .displayNone {
         display: none;
     }
 
-    
+
 
 }
